fixed the bug where you couldnt select the input fields when the viewport was too large

--- a/full_stack_javascript/intermediate_html_css/sign_up_form/style.css
+++ b/full_stack_javascript/intermediate_html_css/sign_up_form/style.css
@@ -108,6 +108,10 @@ a:visited {
   width: 40vw;
 }
 
+#form-main {
+  z-index: 3;
+}
+
 #message {
   color: var(--light-green);
   font-family: "Red Hat Mono", Haettenschweiler, "Arial Narrow Bold", sans-serif;
